# Saturn

./: .env.example  .gitignore  CHANGELOG.md  Procfile  README.md  app.py  desktop.ini  foxbit.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  needs-documentation.md  question-about-the-application.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml  main.yml
algorithms/: __init__.py  queue.py  treap.py
app/: __init__.py  add_migration.py  constant.py  db_config.py  main.py  render.py  scripts.py  set_env.py
app/algorithms/: __init__.py  treap.py
app/db/: __init__.py  create.py  databaseClient.py  handshake.py  insert.py  migrate.py  query.py  setup.py  update.py
app/foxbit/: __init__.py  constants.py  foxbit.py  fserver.py  messages.py  mocker.py  throttle.py  trade.py  utils.py
app/models/: __init__.py  balance.py  deposit.py  holding.py  order.py  quota.py  trade.py  trading_setting.py  user.py  wallet.py
app/scopes/: Wallets.py  __init__.py
app/services/: __init__.py  activate_deposits.py  activate_users.py  create_balances.py  create_wallet.py  (+11 more)
docs/: foxbit_v3_api.json
foxbit/: __init__.py  constants.py  currency_life.py  foxbit.py  table.py
orm/: __init__.py  fields.py  meta.py  model.py  queries.py  registry.py
session/: __init__.py  user_session.py
telegram/: __init__.py  handler.py  receiver.py  render.py  sender.py
tests/: common.py  conftest.py  test_fserver.py  test_orm.py  test_quotas.py  test_wallet.py  utils.py
(+29 files in other folders)
