[tool.poetry]
name="Saturn"
version="0.1.3"
description="A app for buying and selling cryptocurrencies"
authors=["Kinhosz"]

[tool.semantic_release]
version_variable = [
    "src/tryceratops/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}",
    "docs/CONTRIBUTING.md:tryceratops, version {version}"
]
major_on_zero = true
branch = "main"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install poetry && poetry build"